--- a/index.html
+++ b/index.html
@@ -19,6 +19,13 @@
         <button id="copyButton">Click this besh to copy the word 🤸</button>
     </div>
 
+    <footer>
+        <div class="creator-container">
+            <p>Created by Beshy mo Edmark Tuazon 🤸</p>
+
+        </div>
+    </footer>
+
     <script src="./script.js"></script>
 </body>
 
