--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
             <h1>Beshywaps</h1>
             <div class="icon">🤸</div>
         </div>
-        <input type="text" id="inputFields" placeholder="Bakit 🤸 malungkot 🤸 ang 🤸 beshy 🤸 ko">
+        <input type="text" id="inputFields"
+            placeholder="Type ka lang any word na gusto mo (e.g Bakit 🤸 malungkot 🤸 ang 🤸 beshy 🤸 ko)">
         <button id="copyButton">Click this besh to copy the word 🤸</button>
     </div>
 
